            - Fixed heading and distance calculations for VORs
            - Aircraft aware of current runway
            - Automatic runway release after takeoff

        1.6.2 - Airlines
            - Added airline callouts (Speedbird, Easy, Logan, etc.)
            - Aircraft use correct callsigns
            - Realigned aircraft tag information

        1.6.3 - UI adjustments
            - Added text input blip in console
            - Implemented backspace hold for continuous delete
            - Auto-switch log to last contacted aircraft
            - Added fatal error logging & handling
            - Added performance overlay (F3) with system metrics
            - Added detached windows for modular displays (F4, etc.)
            - Improved multiprocessing and state synchronisation

        1.6.4 - Auto-versioning
            - Implemented auto-versioning for EXE builds
            - Added GitHub version comparison on startup
            - Displays "Update available" in window title when out of sync
            - Added version.txt lookup for frozen and non-frozen builds
            - Improved update checker reliability and file parsing

2.0.0 - AI Traffic & Systems
    - Introduced AI-controlled aircraft with autonomous behaviour
    - AI can take off, land, and navigate via VOR fixes
    - Added Quadtree-based spatial management for performance
    - AI decision-making intervals with configurable constants
    - AI-controlled aircraft deconflict automatically

    2.1.0 - AI refinements
        - Enhanced conflict detection using localised queries
        - Added AI command to toggle control between user and system
        - User-issued command overrides AI control

        2.1.1 - UI refinements
            - Added ui modals for quick updates
        
        2.1.2 - UI, FPS advancements
            - Removed all references to in-game windows
            - Converted menus to outside windows
    
    2.2.0
        - Add voice response for aircraft